Fix layout bug

--- a/prpn/static/css/local.css
+++ b/prpn/static/css/local.css
@@ -11,7 +11,7 @@
 }
 
 .preserve-whitespace {
-  white-space: pre;
+  white-space: pre-wrap;
 }
 
 dl.inverted > dt {
